--- a/hackathon/app/templates/app/landing.html
+++ b/hackathon/app/templates/app/landing.html
@@ -34,21 +34,51 @@
 		$.scoped();	
 	</script>
 
+	<!-- <div class="logoBar">
+		<div class="container-fluid">
+			<div class="row" style="justify-content: space-around; padding-top: 10px;">
+				<div class="col-3" style="text-align: start;">
+					<img src="../../static/app/imgs/TataMotorsLogo.png" style="height: 50px; margin-right: 20px;">
+				</div>
+				<div class="col-3" style="text-align: center;">
+					<img src="../../static/app/imgs/logo-3.png" style="height: 50px; margin-right: 20px;">
+				</div>
+				<div class="col-3" style="text-align: end;">
+					<img src="../../static/app/imgs/TataLogo.png" style="height: 50px; margin-right: 20px;">
+				</div>
+			</div>
+		</div>
+	</div> -->
 	<!-- NAVBAR -->
 	<nav class="navbar navbar-expand-lg navbar-bg-custom sticky-top">
-		<div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+		<div class="logoBar">
+			<div class="container-fluid">
+				<div class="row" style="justify-content: space-around; padding-top: 10px;">
+					<div class="col-3" style="text-align: start;">
+						<img src="../../static/app/imgs/TataMotorsLogo.png" style="height: 50px; margin-right: 20px;">
+					</div>
+					<div class="col-3" style="text-align: center;">
+						<img src="../../static/app/imgs/logo-3.png" style="height: 50px; margin-right: 20px;">
+					</div>
+					<div class="col-3" style="text-align: end;">
+						<img src="../../static/app/imgs/TataLogo.png" style="height: 50px; margin-right: 20px;">
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="collapse navbar-collapse justify-content-center" id="navbarNav">
 		    <ul class="navbar-nav navbar-custom">
 		      <li class="nav-item nav-item-link">
-		        <a class="nav-link" id="link-color" href="#">Home</a>
+		        <a class="nav-link" id="link-color" href="landing.html">Home</a>
 		      </li>
 		      <li class="nav-item nav-item-link">
-		        <a class="nav-link" id="link-color" href="#">About Us</a>
+		        <a class="nav-link" id="link-color" href="aboutus.html">About Us</a>
 		      </li>
 		      <li class="nav-item nav-item-link">
-		        <a class="nav-link" id="link-color" href="#">Contact Us</a>
+		        <a class="nav-link" id="link-color" href="contactus.html">Contact Us</a>
 		      </li>
 		    </ul>
-		</div>
+		</div>	
 	</nav>		
 
 	<div class="section-blue">
@@ -278,7 +308,7 @@
 						</div>
 					</div>
 					<div class="col-3" style="padding-right: 20px; padding-left: 20px">
-						<div id="sureshImage" style="position: relative;">
+						<div id="raheeImage" style="position: relative;">
 							<div class="judgeGradient">
 								<div class="judgeInfoBox">
 									<p class="judgeInfo">Dr Rahee Walambe</p>
@@ -349,11 +379,11 @@
 					      <div class="cd-h-timeline__dates">
 					        <div class="cd-h-timeline__line">
 					          <ol>
-					            <li><a href="#0" data-date="15/07/2019" style="left: 100px;" class="cd-h-timeline__date cd-h-timeline__date--selected">16 Jul</a></li>
-					            <li><a href="#0" data-date="15/08/2019" style="left: 280px;" class="cd-h-timeline__date">15 Aug</a></li>
+					            <li><a href="#0" data-date="15/07/2019" style="left: 100px;" class="cd-h-timeline__date cd-h-timeline__date--selected">15 Jul</a></li>
+					            <li><a href="#0" data-date="15/08/2019" style="left: 280px;" class="cd-h-timeline__date">10 Aug</a></li>
 					            <li><a href="#0" data-date="16/08/2019" style="left: 460px;" class="cd-h-timeline__date">16 Aug</a></li>
 					            <li><a href="#0" data-date="17/08/2019" style="left: 640px;" class="cd-h-timeline__date">17 Aug</a></li>
-					            <li><a href="#0" data-date="31/08/2019" style="left: 820px;" class="cd-h-timeline__date">30 Aug</a></li>
+					            <li><a href="#0" data-date="31/08/2019" style="left: 820px;" class="cd-h-timeline__date">31 Aug</a></li>
 					            <li><a href="#0" data-date="27/09/2019" style="left: 1000px;" class="cd-h-timeline__date">27 Sep</a></li>
 					            <li><a href="#0" data-date="30/09/2019" style="left: 1180px;" class="cd-h-timeline__date">30 Sep</a></li>
 					          </ol>
@@ -382,7 +412,7 @@
 					        <li class="cd-h-timeline__event text-component">
 					          <div class="cd-h-timeline__event-content container">
 					            <h2 class="cd-h-timeline__event-title">Registration closes</h2>
-					            <em class="cd-h-timeline__event-date">August 15th, 2019</em>
+					            <em class="cd-h-timeline__event-date">August 10th, 2019</em>
 					            <p class="cd-h-timeline__event-description color-contrast-medium" id="timeline-content"> 
 					            </p>
 					          </div>
@@ -409,7 +439,7 @@
 					        <li class="cd-h-timeline__event text-component">
 					          <div class="cd-h-timeline__event-content container">
 					            <h2 class="cd-h-timeline__event-title">Round 1 (End)</h2>
-					            <em class="cd-h-timeline__event-date">August 30th, 2019</em>
+					            <em class="cd-h-timeline__event-date">August 31st, 2019</em>
 					            <p class="cd-h-timeline__event-description color-contrast-medium" id="timeline-content"> 
 					            </p>
 					          </div>
@@ -584,9 +614,9 @@
 					<div class="follow text-center">
 						<p>Quick Links</p>
 						<ul class="footer-link">
-							<li><a href="">Home</a></li>
-							<li><a href="">About Us</a></li>
-							<li><a href="">Contact Us</a></li>
+							<li><a href="landing.html">Home</a></li>
+							<li><a href="aboutus.html">About Us</a></li>
+							<li><a href="contactus.html">Contact Us</a></li>
 						</ul>
 					</div>
 				</div>
