--- a/hackathon/app/templates/app/privacy.html
+++ b/hackathon/app/templates/app/privacy.html
@@ -44,16 +44,13 @@
 		<div class="collapse navbar-collapse justify-content-end" id="navbarNav">
 		    <ul class="navbar-nav navbar-custom">
 		      <li class="nav-item nav-item-link">
-		        <a class="nav-link" id="link-registration" href="#">Home</a>
+		        <a class="nav-link" id="link-registration" href="landing.html">Home</a>
 		      </li>
 		      <li class="nav-item nav-item-link">
-		        <a class="nav-link" id="link-registration" href="#">About Us</a>
+		        <a class="nav-link" id="link-registration" href="aboutus.html">About Us</a>
 		      </li>
 		      <li class="nav-item nav-item-link">
-		        <a class="nav-link" id="link-registration" href="#">Contact Us</a>
-		      </li>
-		      <li class="nav-item nav-item-link">
-		        <a class="nav-link" id="link-registration" href="#">Know More</a>
+		        <a class="nav-link" id="link-registration" href="contactus.html">Contact Us</a>
 		      </li>
 		    </ul>
 		</div>
@@ -67,15 +64,15 @@
           <div class="container">
             <div class="row">
               <div id="singlepagecontent" class="col-sm-12">
-                    <p></p><p><strong>Group Technology &amp; Innovation Office, Tata Sons Limited</strong><br>
-					<strong>AI Hackathon - Privacy Policy</strong></p>
+                   <!--  <p></p><p><strong>Group Technology &amp; Innovation Office, Tata Sons Limited</strong><br>
+					<strong>AI Hackathon - Privacy Policy</strong></p> -->
 
 					<p><strong>Scope</strong></p>
 
-					<p>This is the privacy policy of TML GDC with regard to:</p>
+					<p>This is the privacy policy of Tata Motors Limited Global Delivery Centre with regard to:</p>
 					<ol>
 					<li>any personal information provided by entities and persons who provide solutions for Tata Motors Hackathon</li>
-					<li>personal information collected and used by TM GDC directly or indirectly.</li>
+					<li>personal information collected and used by Tata Motors Global Delivery Centre directly or indirectly.</li>
 					</ol>
 					<p>'Personal Information' includes any information that relates to a natural person which, either directly or indirectly, in combination with other information available or likely to be available with a body corporate, is capable of identifying such person.</p>
 					<p><em><strong>'Sensitive personal data or information'</strong></em><strong> is a sub-set of personal information and includes the following information:</strong></p>
@@ -111,7 +108,7 @@
 					<ol>
 					<ol>
 					<ol>
-					<li>allow TML GDC and SIT to evaluate the entries submitted by you pursuant to the said event and get in touch with you in connection with the event.</li>
+					<li>allow Tata Motors Limited Global Delivery Centre and Symbiosis Institute of Technology to evaluate the entries submitted by you pursuant to the said event and get in touch with you in connection with the event.</li>
 					<li>improve this website and its services</li>
 					<li>protect our interests where we seek to enforce our policies and agreements.</li>
 					<li>respond to a request from law enforcement or government or government entity.</li>
@@ -148,9 +145,9 @@
 					<p><strong>Disclosure of Personal Information to third party contractors</strong></p>
 					<p>We may share your personal information with a third party for following reasons and under the following circumstances:</p>
 					<ol>
-					<li><strong>For external processing:</strong>provide your personal information to our affiliates or other business associates or persons to process it for us, based on our instructions and in compliance with this Policy and applicable laws.</li>
-					<li><strong>Third-Party Service Providers:</strong>We employ other companies and individuals to perform certain functions on our behalf. Examples include analysing data, providing search results and providing customer service. They have access to your personal information needed to perform their functions but shall not use it for other purposes or disclose it further.</li>
-					<li><strong>Links to Third-Party Sites and Social Media:</strong>Our site may include links to 3rd party sites and the social media and/or plugins to third party sites such as a Facebook Like button or we may allow login through a third party account such as Facebook, in which case you must understand and agree that, We do not control these third party sites, and we encourage You to read the privacy policy of every site You visit.</li>
+					<li><strong>For external processing: </strong>provide your personal information to our affiliates or other business associates or persons to process it for us, based on our instructions and in compliance with this Policy and applicable laws.</li>
+					<li><strong>Third-Party Service Providers: </strong>We employ other companies and individuals to perform certain functions on our behalf. Examples include analysing data, providing search results and providing customer service. They have access to your personal information needed to perform their functions but shall not use it for other purposes or disclose it further.</li>
+					<li><strong>Links to Third-Party Sites and Social Media: </strong>Our site may include links to 3rd party sites and the social media and/or plugins to third party sites such as a Facebook Like button or we may allow login through a third party account such as Facebook, in which case you must understand and agree that, We do not control these third party sites, and we encourage You to read the privacy policy of every site You visit.</li>
 					<li>Your use of these features such as Third-party plugins and login features, including their loading, operation and use, are governed by the privacy policy and terms of the third-party providing them.</li>
 					</ol>
 					<p><strong>Access to your Personal Information</strong></p>
@@ -164,72 +161,44 @@
 					<li>We restrict access to personal information to our employees, contractors and agents who need to know that information in order to process it for us, and who are subject to strict contractual confidentiality obligations and may be disciplined or terminated if they fail to meet these obligations.</li>
 					<li>We also take measures to destroy or permanently de-identify or delete personal information as soon as possible after we determine that it is no longer required by us.</li>
 					</ol>
-					<p><strong>How to Contact us:</strong></p>
-					<p>Please write to us at<u>aihackathon@sitpune.edu.in</u></p>
-					<p><strong>Complaints and grievances</strong></p>
-					<p>If you have any concerns regarding:</p>
-					<ol>
-					<li>discrepancies between the personal information provided by you and the information reflected in our records and the same have not been corrected and/or updated after you have notified the Privacy Officer as stated in this Policy; or,</li>
-					<li>in respect of processing of your personal information; then you may contact our Grievance Officer at our Grievance Redressal Cell. The contact detail of our Grievance Officer is:<u>aihackathon@sitpune.edu.in</u>. OurGrievance Officer shall redress your concern in a time bound manner, within a maximum period of three (3) months from the date of receipt of your communication.</li>
-					</ol>
+					<p><strong>For any queries:</strong></p>
+					<p>Please write to us at <u>aihackathon@sitpune.edu.in</u></p>
 					<p><strong>Changes to privacy policy</strong></p>
 					<p>Our Policy may change from time to time. We will post any changes or update to this Policy on this webpage and, if the changes are significant, we will provide a more prominent notice (including, for certain services, email notification of Policy changes). We will also keep prior versions of thisPolicy in an archive for your review.</p>
 					<p></p>
-					<p><strong>Use of Cookies</strong></p>
-					<p>Cookies are small data files which are placed on the device that you use to access our website or its applications [your Device] when you visit certain parts of the Website. Cookies and similar technologies are used to identify your Device for the following purposes: -</p>
-					<ol>
-					<ol>
-					<li><strong>Strictly necessary cookies. These essential cookies may be set throughout our Website and are required for the operation of our Website to:</strong></li>
-					<ul>
-					<li>allow our web server to determine whether the cookies setting on your web browser has been enabled or disabled. This allows us to know whether data can be collected from your web browser;</li>
-					</ul>
-					<li>temporarily allow you to carry information between pages of our Website to avoid having to re-enter that information;</li>
-					<li>temporarily identify your Device after you have logged in to a secure page on our Website so that our web server can maintain a dialogue with your web browser in order for you to carry out certain activities.</li>
-					<li><strong>Analytical/performance cookies. These are used to help us improve our Website by:</strong></li>
-					<li>tracking your visits to our Website and recognising your web browser when you are a repeat visitor so that we can gather statistics on new and repeat visitors to evaluate site effectiveness.</li>
-					<li><strong>Functionality cookies. These are used to recognise you when you return to our Website. This enables us to:</strong></li>
-					<li>personalise our content for you and remember your preferences (for example, your choice of language and region);</li>
-					<li>store your login and other preferences so you do not have to re-enter that information when you return to the Website.</li>
-					<li><strong>Targeting / advertising cookies. These cookies record your visit to our Website, your response to our online advertisements, track the pages you have visited and the website links you have followed. We use this information to:</strong></li>
-					<li>make our Website more relevant to your interests;</li>
-					<li>provide online advertisements or offers on our Website or third-party websites which are most likely to interest you;</li>
-					<li>limit the number of times you see an advertisement and evaluate the effectiveness of our online marketing and advertising programs.</li>
-					</ol>
-					</ol>
-					<p>The above cookies may be placed on your Device by us or by third parties on our behalf (for example, advertising networks and providers of external services like web traffic analysis services).</p>
-					<p>Most web browsers are initially set up to accept cookies. You can choose to not accept cookies by changing the settings on your web browser but if you block all cookies, including strictly necessary cookies, you may find that certain features on our Website may not work properly.</p>
-					            
 					</div>
 				</div>
 	        </div>
 	</section>
 
-        <div class="footer">
+    	<div class="footer">
 		<div class="container">
 			<div class="row">
 				<div class="col-4">
 					<div class="follow">
-						<p>Code of conduct</p>
+						<p>Help Desk</p>
 						<p id="code">Still got some queries? Mail us at <a href="mailto:someone@example.com?Subject=Hello%20again" target="_top">aihackathon@sitpune.edu.in</a></p>						
 					</div>
 				</div>
 				<div class="col-4">
 					<div class="follow text-center">
 						<p>Follow Us On</p>
-						<img src="../../static/app/imgs/facebook.svg" style="height: 40px; margin-right: 10px;">
+						<!-- <img src="../../static/app/imgs/facebook.svg" style="height: 40px; margin-right: 10px;">
 						<img src="../../static/app/imgs/instagram.svg" style="height: 40px; margin-right: 10px;">
 						<img src="../../static/app/imgs/linkedin.svg" style="height: 40px; margin-right: 10px;">
-						<img src="../../static/app/imgs/google-plus.svg" style="height: 40px; margin-right: 10px;">
+						<img src="../../static/app/imgs/google-plus.svg" style="height: 40px; margin-right: 10px;"> -->
+						<i class="lni-facebook" style="font-size: 25px; margin-right: 10px;"></i>
+						<i class="lni-instagram" style="font-size: 25px; margin-right: 10px;"></i>
+						<i class="lni-twitter" style="font-size: 25px; margin-right: 10px;"></i>
 					</div>
 				</div>
 				<div class="col-4">
 					<div class="follow text-center">
 						<p>Quick Links</p>
 						<ul class="footer-link">
-							<li><a href="">Home</a></li>
-							<li><a href="">About Us</a></li>
-							<li><a href="">Contact Us</a></li>
-							<li><a href="">Know More</a></li>
+							<li><a href="landing.html">Home</a></li>
+							<li><a href="aboutus.html">About Us</a></li>
+							<li><a href="contactus.html">Contact Us</a></li>
 						</ul>
 					</div>
 				</div>
