--- a/hackathon/app/static/app/styles.css
+++ b/hackathon/app/static/app/styles.css
@@ -7,9 +7,15 @@ a:hover{
 	padding-bottom: 60px;
 }
 
+.logoBar{
+	background: #FFF;
+}
+
 .navbar-bg-custom{
-	background: linear-gradient(304.06deg, #06054B 0%, #3301B7 100.66%);
+	/*background: linear-gradient(304.06deg, #06054B 0%, #3301B7 100.66%);*/
+	background: #FFF;
 	height: 80px;
+	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 .navbar-custom{
@@ -27,12 +33,12 @@ a:hover{
 }
 
 #link-color:hover{
-	color: white;
+	color: #000;
 	opacity: 1;
 }
 
 #link-color{
-	color: white;
+	color: #000;
 	opacity: 0.65;
 	font-family: 'Noto Sans',sans-serif;
 	text-transform: uppercase;
@@ -336,6 +342,20 @@ a:hover{
 
  #aratiImage{
  	background-image: url("../../static/app/imgs/arati.jpg");
+ 	height: 360px;
+ 	background-repeat: no-repeat;
+ 	background-size: contain;
+ }
+
+ #raheeImage{
+ 	background-image: url("../../static/app/imgs/rahee.jpg");
+ 	height: 360px;
+ 	background-repeat: no-repeat;
+ 	background-size: contain;
+ }
+
+ #aasifImage{
+ 	background-image: url("../../static/app/imgs/aasif.jpg");
  	height: 360px;
  	background-repeat: no-repeat;
  	background-size: contain;
