--- a/hackathon/webapp/templates/webapp/aboutus.html
+++ b/hackathon/webapp/templates/webapp/aboutus.html
@@ -7,7 +7,7 @@
 	<!-- Bootstrap CSS-->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 	<!-- Custom CSS -->
-	<link rel="stylesheet" type="text/css" href="../../static/app/styles.css">
+	<link rel="stylesheet" type="text/css" href="../../static/webapp/styles.css">
 	<script>document.getElementsByTagName("html")[0].className += " js";</script>
 	<!-- Timeline CSS -->
 	<!-- <link rel="stylesheet" type="text/css" href="../../static/app/timeline.css"> -->
@@ -38,13 +38,13 @@
 		<div class="container-fluid">
 			<div class="row" style="justify-content: space-around; padding-top: 10px;">
 				<div class="col-3" style="text-align: start;">
-					<img src="../../static/app/imgs/TataMotorsLogo.png" style="height: 50px; margin-right: 20px;">
+					<img src="../../static/webapp/imgs/TataMotorsLogo.png" style="height: 50px; margin-right: 20px;">
 				</div>
 				<div class="col-3" style="text-align: center;">
-					<img src="../../static/app/imgs/logo-3.png" style="height: 50px; margin-right: 20px;">
+					<img src="../../static/webapp/imgs/logo-3.png" style="height: 50px; margin-right: 20px;">
 				</div>
 				<div class="col-3" style="text-align: end;">
-					<img src="../../static/app/imgs/TataLogo.png" style="height: 50px; margin-right: 20px;">
+					<img src="../../static/webapp/imgs/TataLogo.png" style="height: 50px; margin-right: 20px;">
 				</div>
 			</div>
 		</div>
@@ -55,13 +55,13 @@
 			<div class="container-fluid">
 				<div class="row" style="justify-content: space-around; padding-top: 10px;">
 					<div class="col-3" style="text-align: start;">
-						<img src="../../static/app/imgs/TataMotorsLogo.png" style="height: 50px; margin-right: 20px;">
+						<img src="../../static/webapp/imgs/TataMotorsLogo.png" style="height: 50px; margin-right: 20px;">
 					</div>
 					<div class="col-3" style="text-align: center;">
-						<img src="../../static/app/imgs/logo-3.png" style="height: 50px; margin-right: 20px;">
+						<img src="../../static/webapp/imgs/logo-3.png" style="height: 50px; margin-right: 20px;">
 					</div>
 					<div class="col-3" style="text-align: end;">
-						<img src="../../static/app/imgs/TataLogo.png" style="height: 50px; margin-right: 20px;">
+						<img src="../../static/webapp/imgs/TataLogo.png" style="height: 50px; margin-right: 20px;">
 					</div>
 				</div>
 			</div>
@@ -81,42 +81,42 @@
 		</div>	
 	</nav>
 
-	<div class="container" style="margin-top: 50px;">
-		<div class="row">
+	<div class="container" style="margin-top: 50px; margin-bottom: 50px;">
+		<div class="row aboutus-div">
 			<div class="col-4">
-				<img src="../../static/app/imgs/TataLogo.svg" width="200px">
+				<img src="../../static/webapp/imgs/TataLogo.svg" width="200px">
 			</div>
 			<div class="col-8">
 				<p>Founded by Jamsetji Tata, the Tata group is a global enterprise, headquartered in India, comprising 30 companies across 10 verticals. With  706,511 employees, we are India's only value based corporation — a visionary, a pioneer, a leader, since 1868.</p>
 			</div>
 		</div>
-		<div class="row">
-			<div class="col-8">
-				<p>Founded by Jamsetji Tata, the Tata group is a global enterprise, headquartered in India, comprising 30 companies across 10 verticals. With  706,511 employees, we are India's only value based corporation — a visionary, a pioneer, a leader, since 1868.</p>
-			</div>
+		<div class="row aboutus-div">
 			<div class="col-4">
-				<img src="../../static/app/imgs/TataMotorsLogo.svg" width="250px">
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-4">
-				<img src="../../static/app/imgs/SIT_Logo_new.png" width="250px">
+				<img src="../../static/webapp/imgs/TataMotorsLogo.svg" width="250px">
 			</div>
 			<div class="col-8">
 				<p>Founded by Jamsetji Tata, the Tata group is a global enterprise, headquartered in India, comprising 30 companies across 10 verticals. With  706,511 employees, we are India's only value based corporation — a visionary, a pioneer, a leader, since 1868.</p>
 			</div>
 		</div>
-		<div class="row">
+		<div class="row aboutus-div">
+			<div class="col-4">
+				<img src="../../static/webapp/imgs/SIT_Logo_new.png" width="250px">
+			</div>
 			<div class="col-8">
 				<p>Founded by Jamsetji Tata, the Tata group is a global enterprise, headquartered in India, comprising 30 companies across 10 verticals. With  706,511 employees, we are India's only value based corporation — a visionary, a pioneer, a leader, since 1868.</p>
 			</div>
+		</div>
+		<div class="row aboutus-div">
 			<div class="col-4">
-				<img src="../../static/app/imgs/SCEI_4.png" width="350px">
+				<img src="../../static/webapp/imgs/SCEI_4.png" width="350px">
+			</div>
+			<div class="col-8">
+				<p>Founded by Jamsetji Tata, the Tata group is a global enterprise, headquartered in India, comprising 30 companies across 10 verticals. With  706,511 employees, we are India's only value based corporation — a visionary, a pioneer, a leader, since 1868.</p>
 			</div>
 		</div>
-		<div class="row">
+		<div class="row aboutus-div">
 			<div class="col-4">
-				<img src="../../static/app/imgs/symbiosislogo.png" width="80px">
+				<img src="../../static/webapp/imgs/symbiosislogo.png" width="80px">
 			</div>
 			<div class="col-8">
 				<p>Founded by Jamsetji Tata, the Tata group is a global enterprise, headquartered in India, comprising 30 companies across 10 verticals. With  706,511 employees, we are India's only value based corporation — a visionary, a pioneer, a leader, since 1868.</p>
