--- a/hackathon/webapp/templates/webapp/landing.html
+++ b/hackathon/webapp/templates/webapp/landing.html
@@ -59,15 +59,30 @@
 						<img src="../../static/webapp/imgs/TataMotorsLogo.png" style="height: 50px; margin-right: 20px;">
 					</div>
 					<div class="col-3" style="text-align: center;">
-						<img src="../../static/webapp/imgs/logo-3.png" style="height: 50px; margin-right: 20px;">
+						<img src="../../static/webapp/imgs/logo-3.png" style="height: 50px;">
 					</div>
 					<div class="col-3" style="text-align: end;">
 						<img src="../../static/webapp/imgs/TataLogo.png" style="height: 50px; margin-right: 20px;">
 					</div>
 				</div>
+				<div class="row">
+					<div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+					    <ul class="navbar-nav navbar-custom">
+					      <li class="nav-item nav-item-link">
+					        <a class="nav-link" id="link-color" href="landing.html">Home</a>
+					      </li>
+					      <li class="nav-item nav-item-link">
+					        <a class="nav-link" id="link-color" href="aboutus.html">About Us</a>
+					      </li>
+					      <li class="nav-item nav-item-link">
+					        <a class="nav-link" id="link-color" href="contactus.html">Contact Us</a>
+					      </li>
+					    </ul>
+					</div>	
+				</div>
 			</div>
 		</div>
-		<div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+		<!-- <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
 		    <ul class="navbar-nav navbar-custom">
 		      <li class="nav-item nav-item-link">
 		        <a class="nav-link" id="link-color" href="landing.html">Home</a>
@@ -79,7 +94,7 @@
 		        <a class="nav-link" id="link-color" href="contactus.html">Contact Us</a>
 		      </li>
 		    </ul>
-		</div>	
+		</div>	 -->
 	</nav>		
 
 	<div class="section-blue">
