--- a/hackathon/webapp/static/webapp/styles.css
+++ b/hackathon/webapp/static/webapp/styles.css
@@ -306,49 +306,49 @@ a:hover{
  }
 
   #ketanImage{
- 	background-image: url("../../static/app/imgs/DrKetan.png");
+ 	background-image: url("../../static/webapp/imgs/DrKetan.png");
  	height: 360px;
  	background-repeat: no-repeat;
  	background-size: contain;
  }
 
  #pradeepImage{
- 	background-image: url("../../static/app/imgs/Pradeep2.jpg");
- 	height: 400px;
+ 	background-image: url("../../static/webapp/imgs/Pradeep2.jpg");
+ 	height: 360px;
  	background-repeat: no-repeat;
  	background-size: contain;
  }
 
  #sureshImage{
- 	background-image: url("../../static/app/imgs/psuresh.jpg");
+ 	background-image: url("../../static/webapp/imgs/psuresh.jpg");
  	height: 360px;
  	background-repeat: no-repeat;
  	background-size: contain;
  }
 
  #balajiImage{
- 	background-image: url("../../static/app/imgs/pBbalaji.jpg");
+ 	background-image: url("../../static/webapp/imgs/pBbalaji.jpg");
  	height: 360px;
  	background-repeat: no-repeat;
  	background-size: contain;
  }
 
  #aasifImage{
- 	background-image: url("../../static/app/imgs/DrKetan.jpg");
+ 	background-image: url("../../static/webapp/imgs/aasif.jpg");
  	height: 360px;
  	background-repeat: no-repeat;
  	background-size: contain;
  }
 
  #aratiImage{
- 	background-image: url("../../static/app/imgs/arati.jpg");
+ 	background-image: url("../../static/webapp/imgs/arati.jpg");
  	height: 360px;
  	background-repeat: no-repeat;
  	background-size: contain;
  }
 
  #raheeImage{
- 	background-image: url("../../static/app/imgs/rahee.jpg");
+ 	background-image: url("../../static/webapp/imgs/rahee.jpg");
  	height: 360px;
  	background-repeat: no-repeat;
  	background-size: contain;
@@ -631,4 +631,9 @@ hr{
 	font-variant: small-caps;
 	color: #000000;
 	margin-bottom: 0;
+}
+
+.aboutus-div{
+	margin-bottom: 30px;
+	/*box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.25); */
 }
